# chess-practice-app

./: .gitignore  .gitmodules  README.md  实施步骤.md  开发日志.md  总纲.md  技术方案.md
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/dev/limit/chess_practice/: MainActivity.kt
app/integration_test/: engine_test.dart  pikafish_engine_test.dart  review_test.dart  xiangqi_engine_test.dart  xiangqi_review_test.dart
app/ios/Flutter/: Debug.xcconfig  Rapfi.xcconfig
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/engine/: pikafish_assets.dart  pikafish_ffi.dart  rapfi_ffi.dart
app/lib/game/: difficulty.dart  engine_value.dart  game_record.dart  game_review.dart  game_state.dart  move_record.dart  stone.dart  win_checker.dart
app/lib/pages/: game_page.dart  home_page.dart  review_page.dart  xiangqi_game_page.dart  xiangqi_review_page.dart
app/lib/widgets/: board_view.dart  score_curve.dart  xiangqi_board_view.dart
app/lib/xiangqi/: fen.dart  piece.dart  xiangqi_board.dart  xiangqi_game.dart  xq_engine_value.dart  xq_game_record.dart  xq_game_review.dart  xq_move.dart  xq_move_record.dart
app/test/: board_view_test.dart  difficulty_test.dart  engine_value_test.dart  game_record_test.dart  game_review_test.dart  game_state_test.dart  score_curve_test.dart  win_checker_test.dart  xiangqi_board_test.dart  xiangqi_board_view_test.dart  xiangqi_game_test.dart  xq_engine_value_test.dart  xq_game_record_test.dart  xq_game_review_test.dart
native/scripts/: build-android-libs.sh  fetch-pikafish-net.sh
native/wrapper/: CMakeLists.txt  pikafish_bridge.cpp  pikafish_bridge.h  pikafish_test_main.c  rapfi_bridge.cpp  rapfi_bridge.h  test_main.c
native/wrapper/.cache/clangd/index/: rapfi_bridge.cpp.E639CFC6917E2BBF.idx  rapfi_bridge.h.DAB9D4F1CEA2B88F.idx  test_main.c.0C8D1B29505B9B24.idx
